k8s/overlays/dev/antarmuka-deployment.yaml
"apiVersion": apps/v1
"kind": Deployment
"metadata":
  "name": antarmuka
  "namespace": simpelv2
"spec":
  "replicas": 1
  "selector":
    "matchLabels":
      "app": antarmuka
  "template":
    "metadata":
      "labels":
        "app": antarmuka
    "spec":
      "restartPolicy": Always
      "containers":
      - "name": antarmuka
        "image": simpelv2/antarmuka:dev
        "imagePullPolicy": IfNotPresent
        "ports":
        - "containerPort": 80
        "volumeMounts": []
        "envFrom":
        - "secretRef":
            "name": antarmuka-secret
      "volumes": []
