k8s/overlays/dev/db-simpelv2-deployment.yaml
"apiVersion": apps/v1
"kind": Deployment
"metadata":
  "name": db-simpelv2
  "namespace": simpelv2
"spec":
  "replicas": 1
  "selector":
    "matchLabels":
      "app": db-simpelv2
  "template":
    "metadata":
      "labels":
        "app": db-simpelv2
    "spec":
      "restartPolicy": Always
      "containers":
      - "name": db-simpelv2
        "image": postgres:15-alpine
        "imagePullPolicy": IfNotPresent
        "ports":
        - "containerPort": 5432
        "volumeMounts":
        - "name": db-simpelv2-vol-0
          "mountPath": /var/lib/postgresql/data
          "readOnly": false
        "envFrom":
        - "secretRef":
            "name": db-simpelv2-secret
      "volumes":
      - "name": db-simpelv2-vol-0
        "hostPath":
          "path": /var/www/simpelv2/pgdata
          "type": DirectoryOrCreate
