k8s/overlays/dev/antarmuka-service.yaml
"apiVersion": v1
"kind": Service
"metadata":
  "name": antarmuka
  "namespace": simpelv2
"spec":
  "selector":
    "app": antarmuka
  "ports":
  - "port": 80
    "targetPort": 80
