k8s/overlays/dev/gerbang-service.yaml
"apiVersion": v1
"kind": Service
"metadata":
  "name": gerbang
  "namespace": simpelv2
"spec":
  "selector":
    "app": gerbang
  "ports":
  - "port": 8080
    "targetPort": 8080
