k8s/overlays/dev/layanan-keamanan-service.yaml
"apiVersion": v1
"kind": Service
"metadata":
  "name": layanan-keamanan
  "namespace": simpelv2
"spec":
  "selector":
    "app": layanan-keamanan
  "ports":
  - "port": 3000
    "targetPort": 3000
