k8s/overlays/dev/nginx-service.yaml
"apiVersion": v1
"kind": Service
"metadata":
  "name": nginx
  "namespace": simpelv2
"spec":
  "selector":
    "app": nginx
  "ports":
  - "port": 80
    "targetPort": 80
