k8s/overlays/dev/ingress.yaml
"apiVersion": networking.k8s.io/v1
"kind": Ingress
"metadata":
  "name": simpelv2-ingress
  "namespace": simpelv2
  "annotations":
    "nginx.ingress.kubernetes.io/rewrite-target": /$1
"spec":
  "rules":
  - "host": simpelv2.local
    "http":
      "paths":
      - "path": /(.*)
        "pathType": Prefix
        "backend":
          "service":
            "name": gerbang
            "port":
              "number": 3000
  "tls":
  - "hosts":
    - simpelv2.local
    "secretName": simpelv2-tls
